fix(style): improve card layout with full height and flexible header alignment

--- a/gravitee-apim-console-webui/src/shared/components/gio-widget-layout/gio-widget-layout.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-widget-layout/gio-widget-layout.component.scss
@@ -9,6 +9,7 @@ $cardHeaderBorderColor: map.get(gio.$mat-theme, foreground);
   border: 1px solid $borderColor;
   border-radius: 8px;
   transition: height 0.3s ease-in-out;
+  height: 100%;
 
   &__title {
     display: flex;
@@ -23,6 +24,8 @@ $cardHeaderBorderColor: map.get(gio.$mat-theme, foreground);
 
   &__header {
     border-bottom: 1px solid mat.m2-get-color-from-palette($cardHeaderBorderColor, divider);
+    flex: 1;
+    align-items: center;
   }
 }
 
